PROD-1988 - Fix Header alignment

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_group_header.scss
@@ -312,6 +312,7 @@
 
 				.groups-meta {
 					display: block;
+					margin-bottom: 0;
 					margin-left: $marg-xsml;
 					max-width: initial;
 					position: static;
